--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -18,7 +18,7 @@ label{
     font-size: 16px;
     text-align: center;
 }
-button{
+.button{
 	font-size: 1.125rem;
 	font-weight: 600;
 	border: 1px solid #a00ec4;
@@ -53,7 +53,7 @@ button{
     font-size: 16px;
 }
 
-button:hover{
+.button:hover{
 	background-color: rgba(255,255,255,0.7);	
 	color: #a00ec4;
 	-webkit-transition: all 200ms ease-in;
